fixed centering issue on iOS

--- a/app/static/CSS/mobile.css
+++ b/app/static/CSS/mobile.css
@@ -11,9 +11,19 @@ body, #right {
     overflow: hidden;
 }
 
+#settings-button {
+    width: 5vw;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    /*position: absolute;*/
+    /*left: .5em;*/
+    /*top: 0.5em;*/
+}
+
 #plan_select, h1 {
     margin: 0;
-    width: 100%;
+    width: 95vw;
     border: 0;
     font-size: 2.5rem;
     text-align: center;
@@ -22,6 +32,18 @@ body, #right {
     background-image: var(--background);
     color: white;
     border-radius: 0;
+}
+
+/*select {*/
+/*    filter: opacity(100%);*/
+/*}*/
+
+#header {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--main-color);
+    background-image: var(--background);
+    justify-content: space-between;
 }
 
 a, p {
@@ -169,11 +191,6 @@ a[href] {
 
 .gr1-2, .gr2-2, .gr1-3, .gr2-3, .gr3-3, .gr1-wf, .gr2-wf, .gr1-r{
     display: none;
-}
-#settings-button {
-    position: absolute;
-    left: .5em;
-    top: 0.5em;
 }
 .material-icons {
     color: white;
